formulario de tareas

--- a/tasks/templates/tasks/signup.html
+++ b/tasks/templates/tasks/signup.html
@@ -1,3 +1,7 @@
+{% extends 'tasks/base.html' %}
+
+{% block content %}
+
 <h1>signup page</h1>
 {{ error }}
 <form method="POST">
@@ -8,3 +12,5 @@
         signup
     </button>
 </form>
+
+{% endblock  %}
