--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -10,12 +10,14 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="{% url 'tasks' %}">tasks</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}">logout</a></li>
+            <li><a href="{% url 'tasks' %}">Tasks</a></li>
+            <li><a href="{% url 'tasks_completed' %}">Tasks Completed</a></li>
+            <li><a href="{% url 'create_tasks' %}">Create Task</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
-            <li><a href="{% url 'signin' %}">signin</a></li>
-            <li><a href="{% url 'signup' %}">signup</a></li>
+            <li><a href="{% url 'signin' %}">Signin</a></li>
+            <li><a href="{% url 'signup' %}">Signup</a></li>
             {% endif %}
         </ul>
     </nav>
