--- a/tasks/templates/tasks/create_task.html
+++ b/tasks/templates/tasks/create_task.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>create tasks page</h1>
+{{ error }}
 <form action="/tasks/create/" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
