--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -1,7 +1,21 @@
 {% extends 'tasks/base.html' %}
 
 {% block content %}
-
-<h1>tasks page</h1>
-
+<h1>tasks pending</h1>
+<ul>
+    {% for task in tasks %}
+        <li>
+            <a href="{% url 'task_detail' task.id %}">
+                {% if task.important %}
+                    <strong>{{task.title}}</strong>
+                {% else %}
+                    {{task.title}}
+                {% endif %}
+                <p>{{task.description}}</p>
+                <p>{{task.user.username}}</p>
+                <p>{{task.datecompleted|date:'M j Y:i'}}</p>    
+            </a>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock  %}
