--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -4,22 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
     <title>Django CRUD app</title>
+    <style type="text/css">
+        body { background-color: #D8D8D8; }
+    </style>
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            {% if user.is_authenticated %}
-            <li><a href="{% url 'tasks' %}">Tasks</a></li>
-            <li><a href="{% url 'tasks_completed' %}">Tasks Completed</a></li>
-            <li><a href="{% url 'create_tasks' %}">Create Task</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
-            {% else %}
-            <li><a href="{% url 'signin' %}">Signin</a></li>
-            <li><a href="{% url 'signup' %}">Signup</a></li>
-            {% endif %}
-        </ul>
+<body style=".{backgraund-color: #D8D8D8};" class="">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/">CRUD Django</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    {% if user.is_authenticated %}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tasks_completed' %}">Tasks Completed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create_tasks' %}">Create Tasks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signin' %}">Signin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Singup</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     </nav>
     {% block content %}
 
