--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -1,6 +1,15 @@
 {% extends 'tasks/base.html' %}
 {% block content %}
 
-<h1>home page</h1>
+<main class="container py-5">
+    <section class="card card-body" >
+        <h2 class="display-1" >Django App</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae earum similique quae aliquid, consequuntur quidem accusamus nihil sed non consectetur ratione aliquam molestiae quas quibusdam eligendi distinctio rem cumque quod.</p>
+        <div class="text-center">
+            <a class="btn btn-secondary" href="{% url 'signin' %}">signin</a>
+            <a class="btn btn-dark"  href="{% url 'signup' %}">signup</a>
+        </div>
+    </section>
+</main>
 
 {% endblock  %}
